--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <a href="{{ '/index.html' | relative_url }}">Home</a> |
     <a href="{{ '/research.html' | relative_url }}">Research</a> |
     <a href="{{ '/people.html' | relative_url }}">People</a> |
-    <a href="{{ '/school/index.html' | relative_url }}">Algebra School</a> |
+    <a href="{{ '/summer-school/index.html' | relative_url }}">Algebra School</a> |
     <a href="{{ '/contact.html' | relative_url }}">Contact</a>
   </nav>
 </header>
